--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	<!-- Таблица -->
     <section>
         <h2>Таблица</h2>
-        <table>
+        <table border = "1" style = "wigth: 100%; border-collapse;">
             <tr>
                 <th>№</th>
                 <th>Фамилия</th>
@@ -237,4 +237,5 @@
         <p>&copy; Сергей Синица</p>
     </footer>
 </body>
+
 </html>
