--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<!-- ШАПКА -->
     <header>
         <div class="logo-container">
-			<img src = "flowers.webp" alt = "Логотип" class = "round-logo">
+			<img src = "image.webp" alt = "Логотип" class = "round-logo">
 		</div>
         <h1>Название сайта</h1>
         <nav>
@@ -239,4 +239,5 @@
 </body>
 
 </html>
+
 
